automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
  
  <head>
-   <title> *Title here </title>
+   <title> PLaying with HTML </title>
  </head> 
   
   <body>
-    
+    <p> This is a paragraph</p>
+    <li> This is a list </li>
   </body>
 
 </html>
