automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  </head> 
   
   <body>
+    <h1>PLaying with HTML</h1>
     <p> This is a paragraph</p>
     <a href="http://www.flatironschool.com">Flatiron School</a>
     <li> This is a list </li>
