automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p> This is a paragraph</p>
     <a href="http://www.flatironschool.com">Flatiron School</a>
     <ul>
-      <li></li>
+      <li>This is a list</li>
     </ul>
   </body>
 
