automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>PLaying with HTML</h1>
     <p> This is a paragraph</p>
     <a href="http://www.flatironschool.com">Flatiron School</a>
+    <h2>List</h2>
     <ul>
       <li>This is a list</li>
       <li>This is a list</li>
