--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+ 
+ <head>
+   <title> PLaying with HTML </title>
+ </head> 
+  
+  <body>
+    <h1>PLaying with HTML</h1>
+    <p> This is a paragraph</p>
+    <a href="http://www.flatironschool.com">Flatiron School</a>
+    <h2>List</h2>
+    <ul>
+      <li>This is a list</li>
+      <li>This is a list</li>
+      <li>This is a list</li>
+    </ul>
+  </body>
+
+</html>
